// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Render left button and logo only 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#d31145",
        "borderBottomLeftRadius": 16,
        "flexDirection": "row",
        "overflow": "visible",
        "paddingHorizontal": 16,
        "width": "100%",
        "zIndex": 98,
      },
      Object {
        "backgroundColor": "#d31145",
        "paddingBottom": AnimatedValue {
          " __value": 16,
        },
        "paddingTop": 36,
      },
      false,
      undefined,
    ]
  }
>
  <View
    accessibilityHint="This is the header"
    accessibilityLabel="Accessible Header"
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 24,
            "minWidth": 24,
          },
          Object {
            "marginRight": 12,
          },
        ]
      }
      testID="leftButtonContainerTestID"
    >
      <View>
        <View
          accessibilityHint="This button will take you home"
          accessibilityLabel="Accessible header button left"
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              false,
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
            testID="touchableWrapperTestID"
          >
            <View
              style={
                Array [
                  undefined,
                  undefined,
                ]
              }
            >
              <svg
                data-file-name="SvgMenu"
                fill="#fff"
                height={24}
                width={24}
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Object {
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessibilityRole="text"
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            false,
            Object {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "flexDirection": "row",
              "justifyContent": "center",
            },
          ]
        }
        testID="titleIconTextTestID"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Array [
                  Object {
                    "fontSize": 17,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#fff",
                  },
                ],
              ]
            }
          />
          <View
            accessibilityHint="This is header title icon"
            accessibilityLabel="Accessible header title icon"
            style={
              Array [
                undefined,
                undefined,
              ]
            }
          >
            <svg
              data-file-name="SvgLogoWhite"
              fill="#fff"
              height={24}
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "height": 24,
            "minWidth": 24,
          },
          Object {
            "marginLeft": 12,
          },
        ]
      }
      testID="rightButtonContainerTestID"
    />
  </View>
</View>
`;

exports[`Header Render logo only 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#d31145",
        "borderBottomLeftRadius": 16,
        "flexDirection": "row",
        "overflow": "visible",
        "paddingHorizontal": 16,
        "width": "100%",
        "zIndex": 98,
      },
      Object {
        "backgroundColor": "#d31145",
        "paddingBottom": AnimatedValue {
          " __value": 16,
        },
        "paddingTop": 36,
      },
      false,
      undefined,
    ]
  }
>
  <View
    accessibilityHint="This is the header"
    accessibilityLabel="Accessible Header"
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Object {
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessibilityRole="text"
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            false,
            Object {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "flexDirection": "row",
              "justifyContent": "center",
            },
          ]
        }
        testID="titleIconTextTestID"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Array [
                  Object {
                    "fontSize": 17,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#fff",
                  },
                ],
              ]
            }
          />
          <View
            accessibilityHint="This is header title icon"
            accessibilityLabel="Accessible header title icon"
            style={
              Array [
                undefined,
                undefined,
              ]
            }
          >
            <svg
              data-file-name="SvgLogoWhite"
              fill="#fff"
              height={24}
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Header Render right button with button label and title logo only 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#d31145",
        "borderBottomLeftRadius": 16,
        "flexDirection": "row",
        "overflow": "visible",
        "paddingHorizontal": 16,
        "width": "100%",
        "zIndex": 98,
      },
      Object {
        "backgroundColor": "#d31145",
        "paddingBottom": AnimatedValue {
          " __value": 16,
        },
        "paddingTop": 36,
      },
      false,
      undefined,
    ]
  }
>
  <View
    accessibilityHint="This is the header"
    accessibilityLabel="Accessible Header"
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 24,
            "minWidth": 24,
          },
          Object {
            "marginRight": 12,
          },
        ]
      }
      testID="leftButtonContainerTestID"
    />
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Object {
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <View
        accessibilityRole="text"
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            false,
            Object {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "flexDirection": "row",
              "justifyContent": "center",
            },
          ]
        }
        testID="titleIconTextTestID"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Array [
                  Object {
                    "fontSize": 17,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#fff",
                  },
                ],
              ]
            }
          />
          <View
            accessibilityHint="This is header title icon"
            accessibilityLabel="Accessible header title icon"
            style={
              Array [
                undefined,
                undefined,
              ]
            }
          >
            <svg
              data-file-name="SvgLogoWhite"
              fill="#fff"
              height={24}
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "height": 24,
            "minWidth": 24,
          },
          Object {
            "marginLeft": 12,
          },
        ]
      }
      testID="rightButtonContainerTestID"
    >
      <View>
        <View
          accessibilityHint="This button will take to the notification"
          accessibilityLabel="Accessible header button right"
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              false,
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                false,
              ]
            }
            testID="touchableWrapperTestID"
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                  Object {
                    "color": "#fff",
                    "fontSize": 12,
                    "marginRight": 5,
                  },
                ]
              }
            >
              Updated today
            </Text>
            <View
              style={
                Array [
                  undefined,
                  undefined,
                ]
              }
            >
              <svg
                data-file-name="SvgNotifications"
                fill="#fff"
                height={24}
                width={24}
              />
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "borderRadius": 7.5,
                "height": 15,
                "width": 15,
              },
              Object {
                "alignItems": "center",
                "backgroundColor": "#d31145",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "position": "absolute",
                  "right": -3,
                  "top": -3,
                  "zIndex": 10,
                },
                Object {
                  "backgroundColor": "#e10c0a",
                  "borderColor": "#fff",
                  "borderWidth": 1,
                },
              ],
            ]
          }
          testID="badgeTestID"
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                Array [
                  Object {
                    "color": "#fff",
                    "fontSize": 10,
                  },
                  undefined,
                ],
              ]
            }
          >
            1
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Header Render title with icon 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#d31145",
        "borderBottomLeftRadius": 16,
        "flexDirection": "row",
        "overflow": "visible",
        "paddingHorizontal": 16,
        "width": "100%",
        "zIndex": 98,
      },
      Object {
        "backgroundColor": "#d31145",
        "paddingBottom": AnimatedValue {
          " __value": 16,
        },
        "paddingTop": 36,
      },
      false,
      undefined,
    ]
  }
>
  <View
    accessibilityHint="This is the header"
    accessibilityLabel="Accessible Header"
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Object {
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessibilityRole="text"
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            false,
            Object {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "flexDirection": "row",
              "justifyContent": "center",
            },
          ]
        }
        testID="titleIconTextTestID"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Array [
                  Object {
                    "fontSize": 17,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#fff",
                  },
                ],
              ]
            }
          />
          <View
            accessibilityHint="This is header title icon"
            accessibilityLabel="Accessible header title icon"
            style={
              Array [
                undefined,
                undefined,
              ]
            }
          >
            <svg
              data-file-name="SvgLogoWhite"
              fill="#fff"
              height={24}
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Header Render with additional configs 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#d31145",
        "borderBottomLeftRadius": 16,
        "flexDirection": "row",
        "overflow": "visible",
        "paddingHorizontal": 16,
        "width": "100%",
        "zIndex": 98,
      },
      Object {
        "backgroundColor": "#d31145",
        "paddingBottom": AnimatedValue {
          " __value": 50,
        },
        "paddingTop": 20,
      },
      Object {
        "elevation": 12,
        "shadowColor": "#363e3f",
        "shadowOffset": Object {
          "height": 5,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 10,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityHint="This is the header"
    accessibilityLabel="Accessible Header"
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Object {
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessibilityRole="text"
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            false,
            Object {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "flexDirection": "row",
              "justifyContent": "center",
            },
          ]
        }
        testID="titleIconTextTestID"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Array [
                  Object {
                    "fontSize": 17,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#fff",
                  },
                ],
              ]
            }
          >
            AIA Vitality
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Header render with title label and side buttons 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#d31145",
        "borderBottomLeftRadius": 16,
        "flexDirection": "row",
        "overflow": "visible",
        "paddingHorizontal": 16,
        "width": "100%",
        "zIndex": 98,
      },
      Object {
        "backgroundColor": "#d31145",
        "paddingBottom": AnimatedValue {
          " __value": 16,
        },
        "paddingTop": 36,
      },
      false,
      undefined,
    ]
  }
>
  <View
    accessibilityHint="This is the header"
    accessibilityLabel="Accessible Header"
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 24,
            "minWidth": 24,
          },
          Object {
            "marginRight": 12,
          },
        ]
      }
      testID="leftButtonContainerTestID"
    >
      <View>
        <View
          accessibilityHint="This button will take you home"
          accessibilityLabel="Accessible header button left"
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              false,
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
            testID="touchableWrapperTestID"
          >
            <View
              style={
                Array [
                  undefined,
                  undefined,
                ]
              }
            >
              <svg
                data-file-name="SvgMenu"
                fill="#fff"
                height={24}
                width={24}
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Object {
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessibilityRole="text"
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            false,
            Object {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "flexDirection": "row",
              "justifyContent": "center",
            },
          ]
        }
        testID="titleIconTextTestID"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Array [
                  Object {
                    "fontSize": 17,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#fff",
                  },
                ],
              ]
            }
          >
            AIA Vitality
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "height": 24,
            "minWidth": 24,
          },
          Object {
            "marginLeft": 12,
          },
        ]
      }
      testID="rightButtonContainerTestID"
    >
      <View>
        <View
          accessibilityHint="This button will take to the notification"
          accessibilityLabel="Accessible header button right"
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              false,
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                false,
              ]
            }
            testID="touchableWrapperTestID"
          >
            <View
              style={
                Array [
                  undefined,
                  undefined,
                ]
              }
            >
              <svg
                data-file-name="SvgNotifications"
                fill="#fff"
                height={24}
                width={24}
              />
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "borderRadius": 7.5,
                "height": 15,
                "width": 15,
              },
              Object {
                "alignItems": "center",
                "backgroundColor": "#d31145",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "position": "absolute",
                  "right": -3,
                  "top": -3,
                  "zIndex": 10,
                },
                Object {
                  "backgroundColor": "#e10c0a",
                  "borderColor": "#fff",
                  "borderWidth": 1,
                },
              ],
            ]
          }
          testID="badgeTestID"
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                Array [
                  Object {
                    "color": "#fff",
                    "fontSize": 10,
                  },
                  undefined,
                ],
              ]
            }
          >
            1
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Header render with title label and side buttons on right 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#d31145",
        "borderBottomLeftRadius": 16,
        "flexDirection": "row",
        "overflow": "visible",
        "paddingHorizontal": 16,
        "width": "100%",
        "zIndex": 98,
      },
      Object {
        "backgroundColor": "#d31145",
        "paddingBottom": AnimatedValue {
          " __value": 16,
        },
        "paddingTop": 36,
      },
      false,
      undefined,
    ]
  }
>
  <View
    accessibilityHint="This is the header"
    accessibilityLabel="Accessible Header"
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Object {
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <View
        accessibilityRole="text"
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            false,
            Object {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "flexDirection": "row",
              "justifyContent": "center",
            },
          ]
        }
        testID="titleIconTextTestID"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Array [
                  Object {
                    "fontSize": 17,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#fff",
                  },
                ],
              ]
            }
          >
            AIA Vitality
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "height": 24,
            "minWidth": 24,
          },
          Object {
            "marginLeft": 12,
            "marginRight": 4,
          },
        ]
      }
      testID="leftButtonContainerTestID"
    >
      <View>
        <View
          accessibilityHint="This button will take you home"
          accessibilityLabel="Accessible header button left"
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              false,
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
            testID="touchableWrapperTestID"
          >
            <View
              style={
                Array [
                  undefined,
                  undefined,
                ]
              }
            >
              <svg
                data-file-name="SvgMenu"
                fill="#fff"
                height={24}
                width={24}
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "height": 24,
            "minWidth": 24,
          },
          Object {
            "marginLeft": 12,
          },
        ]
      }
      testID="rightButtonContainerTestID"
    >
      <View>
        <View
          accessibilityHint="This button will take to the notification"
          accessibilityLabel="Accessible header button right"
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              false,
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                false,
              ]
            }
            testID="touchableWrapperTestID"
          >
            <View
              style={
                Array [
                  undefined,
                  undefined,
                ]
              }
            >
              <svg
                data-file-name="SvgNotifications"
                fill="#fff"
                height={24}
                width={24}
              />
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "borderRadius": 7.5,
                "height": 15,
                "width": 15,
              },
              Object {
                "alignItems": "center",
                "backgroundColor": "#d31145",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "position": "absolute",
                  "right": -3,
                  "top": -3,
                  "zIndex": 10,
                },
                Object {
                  "backgroundColor": "#e10c0a",
                  "borderColor": "#fff",
                  "borderWidth": 1,
                },
              ],
            ]
          }
          testID="badgeTestID"
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                Array [
                  Object {
                    "color": "#fff",
                    "fontSize": 10,
                  },
                  undefined,
                ],
              ]
            }
          >
            1
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
